Day 04 - Refactoring on main logic