@@ -4,70 +4,66 @@ import java.util.Objects;
 
 public record Day04(long part1, long part2) {
 
+    private static final char PAPER = '@';
+    private static final char EMPTY = '.';
+    private static final int MIN_NEIGHBORS = 4;
+
     public Day04(List<String> input) {
-        this(solvePart1(Objects.requireNonNull(input)), solvePart2(input));
+        Objects.requireNonNull(input, "input must not be null");
+        this(solve(input, false), solve(input, true));
     }
 
-    private static long solvePart1(List<String> input) {
-        long total = 0;
-
+    private static long solve(List<String> input, boolean recurring) {
         final var height = input.size();
-        final var width = input.get(0).length();
+        final var width = input.getFirst().length();
 
-        for (int i = 0; i < height; i++) {
-            String line = input.get(i);
-            for (int j = 0; j < width; j++) {
-                if (line.charAt(j) == '@' && countPapersAround(input, i, j, height, width) < 4) {
-                    total++;
-                }
-            }
-        }
+        List<String> grid = new ArrayList<>(input);
 
-        return total;
-    }
+        long totalRemoved = 0L;
+        long diff;
 
-    private static long solvePart2(List<String> input) {
-        long total = 0;
+        do {
+            diff = 0L;
+            var nextGrid = new ArrayList<String>(height);
 
-        final var height = input.size();
-        final var width = input.get(0).length();
+            for (var row = 0; row < height; row++) {
+                var line = grid.get(row);
+                var chars = line.toCharArray();
 
-        long diff = -1;
-
-        while (diff != 0) {
-            diff = 0;
-            var changedList = new ArrayList<String>();
-            for (int i = 0; i < height; i++) {
-                char[] array = input.get(i).toCharArray();
-                String line = input.get(i);
-                for (int j = 0; j < width; j++) {
-                    if (line.charAt(j) == '@'
-                            && countPapersAround(input, i, j, height, width) < 4) {
-                        array[j] = '.';
+                for (var col = 0; col < width; col++) {
+                    if (line.charAt(col) == PAPER
+                            && countAdjacentPapers(grid, row, col, height, width) < MIN_NEIGHBORS) {
+                        chars[col] = EMPTY;
                         diff++;
                     }
                 }
-                changedList.add(String.valueOf(array));
-            }
-            total += diff;
-            input = changedList;
-        }
 
-        return total;
+                nextGrid.add(String.valueOf(chars));
+            }
+
+            totalRemoved += diff;
+            grid = nextGrid;
+        } while (diff != 0L && recurring);
+
+        return totalRemoved;
     }
 
-    private static int countPapersAround(List<String> input, int i, int j, int heigth, int width) {
-        int count = 0;
-        for (int a = i - 1; a <= i + 1; a++) {
-            for (int b = j - 1; b <= j + 1; b++) {
-                if (a < 0 || b < 0 || a >= heigth || b >= width) {
+    private static int countAdjacentPapers(
+            List<String> grid, int row, int col, int height, int width) {
+        var count = 0;
+
+        for (var r = Math.max(0, row - 1); r <= Math.min(height - 1, row + 1); r++) {
+            var line = grid.get(r);
+            for (var c = Math.max(0, col - 1); c <= Math.min(width - 1, col + 1); c++) {
+                if (r == row && c == col) {
                     continue;
                 }
-                if (input.get(a).charAt(b) == '@') {
+                if (line.charAt(c) == PAPER) {
                     count++;
                 }
             }
         }
-        return count - 1;
+
+        return count;
     }
 }
